--- a/index.html
+++ b/index.html
@@ -28,25 +28,27 @@
 
     </head>
     <body>
-        <div class="container">
-            <div class="row py-5">
-                <div class="col-md-8 offset-md-2">
-                    <div class="card">
-                        <div class="card-header text-center">
-                            <h3>Random Quote Machine</h3>
-                        </div>
-                        <div class="card-body">
-                          <h5 class="card-text"> <div id="text"> </div> </h5>
-                          <p class="card-text"> <div id="author" class="text-right"> </div></p>
-                          <button id="new-quote" onClick="randomQuoteGenerator()" class="btn btn-primary">New Quote</button>
-                        </div>
-                        <div class="card-footer text-muted text-center">
-                          <p>by Alessandro Saggese</p>
-                        </div>
-                      </div>
-                </div>
+      <div class="container">
+        <div class="row py-5">
+          <div class="col md-8 offset-md-2">
+            <div class="card">
+              <div class="card-header text-center">
+                <h3>Random Quote Machine</h3>
+              </div>
+              <div class="card-body">
+                <blockquote class="blockquote mb-0">
+                  <p class="card-text"> <div id="text"> </div> </p>
+                  <footer class="blockquote-footer"><cite title="Source Title"><div id="author"> </div></cite></footer>
+                </blockquote>
+              </div>
+              <button id="new-quote" onClick="randomQuoteGenerator()" class="btn btn-primary btn-lg">New Quote</button>
+              <div class="card-footer text-muted text-center">
+                <p>by Alessandro Saggese</p>
+              </div>
             </div>
+          </div>
         </div>
+      </div>
       
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
