--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
               </div>
               <button id="new-quote" onClick="randomQuoteGenerator()" class="btn btn-primary btn-lg">New Quote</button>
               <div class="card-footer text-muted text-center">
-                <p>by Alessandro Saggese</p>
+                <p class="font-italic mt-5 mb-3 text-muted text-center pt-3">By Alessandro Saggese</p>
               </div>
             </div>
           </div>
